// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar snapshot (dois temas): claro 1`] = `
<View
  accessibilityLabel="Ana Clara Souza"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#F6F6F7",
      "borderRadius": 20,
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "color": "#5F5F6A",
        },
        {
          "fontSize": 16,
          "lineHeight": 20,
        },
        null,
      ]
    }
  >
    AS
  </Text>
</View>
`;

exports[`Avatar snapshot (dois temas): escuro 1`] = `
<View
  accessibilityLabel="Ana Clara Souza"
  accessible={true}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#17171A",
      "borderRadius": 20,
      "height": 40,
      "justifyContent": "center",
      "overflow": "hidden",
      "width": 40,
    }
  }
>
  <Text
    maxFontSizeMultiplier={1.3}
    style={
      [
        {
          "fontFamily": "Inter-Medium",
          "fontSize": 14,
          "lineHeight": 18,
        },
        {
          "color": "#9B9BA6",
        },
        {
          "fontSize": 16,
          "lineHeight": 20,
        },
        null,
      ]
    }
  >
    AS
  </Text>
</View>
`;
